v0.3.0

	- htmlspecialchars() is now used instead of htmlentities() for better
	  encoding support.

v0.2.0

	- PHP 4 support added (patch by Pierre Jochem).
	- Bugfix (#1): {{$var}} at end-of-line eats newline following it.
	- Various examples added.
	- Added the ability to turn off automatic escaping using htmlentities().
	- Improved the error reporting.
	- The locale can now be changed after creating a Templum instance.
	- Userguide updated.

v0.1.0

	- Initial release.