@@ -1,0 +1,5 @@
+[[ $this->inherit('index') ]]
+[: block page :]About[: endblock :]
+[: block contents :]
+This page is about {{ $apptitle }}. {{ $apptitle }} is an example of inheritance in the Templum templating library for PHP.
+[: endblock :]
