@@ -1,0 +1,5 @@
+[[ $this->inherit('index') ]]
+[: block page :]Contact[: endblock :]
+[: block contents :]
+If you need to contact us, please email to <a href="mailto:some@example.com">some@example.com</a>.
+[: endblock :]
