@@ -1,0 +1,5 @@
+[[ $this->inherit('index') ]]
+[: block page :]Home[: endblock :]
+[: block contents :]
+This is the homepage of the {{ $apptitle }} example.
+[: endblock :]
