@@ -1,0 +1,2 @@
+[[ $this->inherit('Inherit_Basic_Parent') ]]
+[: block title :]Child[: endblock :]
