@@ -1,0 +1,1 @@
+[[ $this->inherit('Inherit_Basic_Parent') ]]
