@@ -30,6 +30,7 @@
 				<li>Very fast. Renders 10,000 templates in <tt>0.741s</tt> (Native PHP takes <tt>0.633s</tt>).</li>
 				<li>I18N (translated) templates.</li>
 				<li>Per-session caching of rendered templates.</li>
+				<li>Inheritance.</li>
 				<li>Security by automatic encoding of HTML entities.</li>
 				<li>Universal, global and local variables.</li>
 				<li>PHP v4 and v5 support.</li>
@@ -62,11 +63,11 @@
 			<a name="download"><h2>Download</h2></a>
 			<h3>PEAR</h3>
 			<p><i>Notice:</i> If you've got an older version of Templum installed, you must first remove that version using the following command:</p>
-			<pre>pear uninstall channel://__uri/templum-0.1.0</pre>
+			<pre>pear uninstall channel://__uri/templum-0.2.0</pre>
 			<p>You can directly install Templum from the Internet if you've got PEAR installed with the following command:</p>
-			<pre>pear install http://templum.electricmonk.nl/releases/templum-0.2.0.tgz</pre>
+			<pre>pear install http://templum.electricmonk.nl/releases/templum-0.3.0.tgz</pre>
 			<p>You can also download the PEAR package manually and install it with:</p>
-			<pre>pear install ./templum-0.2.0.tgz</pre>
+			<pre>pear install ./templum-0.3.0.tgz</pre>
 			<p><a href="http://templum.electricmonk.nl/releases/templum-0.2.0.tgz">http://templum.electricmonk.nl/releases/templum-0.2.0.tgz</a></p>
 
 			<h3>Source</h3>
